# mcu

./: .gitignore  CMakeLists.txt  README.md  main.cpp  toolchain.cmake
app/: CMakeLists.txt  README.md  main.cpp
app/cpp/: app.cpp
app/images/: images.qrc
app/models/: SerialPortManager.cpp  SerialPortManager.h  ServerManager.cpp  ServerManager.h  TcpServerManager.cpp  TcpServerManager.h  UdpServerManager.cpp  UdpServerManager.h
app/qml/: main.qml  qml.qrc
app/qml/screens/: Control.qml  Trace.qml
cmake/: pico.cmake  proto.cmake  stm32.cmake  stm32_f4.cmake  stm32_f7.cmake  stm32_h7.cmake  target.cmake  target_pico.cmake  target_stm32.cmake
mcl/: README.md  adc.h  config.h  i2c.h  log.h  mcl.h  motor.h  pwm.h  serial.h  uart.h  vcp.h
mcl/cdc/: CMakeLists.txt
mcl/cdc/demo/: cdc_loop.c  cdc_startup.c
mcl/cdc/inc/: hid_usage_button.h  hid_usage_consumer.h  hid_usage_desktop.h  hid_usage_device.h  hid_usage_game.h  hid_usage_keyboard.h  hid_usage_led.h  hid_usage_ordinal.h  hid_usage_power.h  hid_usage_simulation.h  hid_usage_sport.h  hid_usage_telephony.h  hid_usage_vr.h  stm32_compat.h  usb.h  usb_cdc.h  usb_cdca.h  usb_cdce.h  usb_cdci.h  usb_cdcp.h  usb_cdcw.h  usb_dfu.h  usb_hid.h  usb_std.h  usb_tmc.h  usbd_core.h
mcl/cdc/src/: memmap.inc  usbd_core.c  usbd_stm32f103_devfs.c  usbd_stm32f103_devfs_asm.S  usbd_stm32f105_otgfs.c  usbd_stm32f429_otgfs.c  usbd_stm32f429_otghs.c  usbd_stm32f446_otgfs.c  usbd_stm32f446_otghs.c  usbd_stm32h743_otgfs.c  usbd_stm32l052_devfs.c  usbd_stm32l052_devfs_asm.S  usbd_stm32l100_devfs.c  usbd_stm32l100_devfs_asm.S  usbd_stm32l433_devfs.c  usbd_stm32l476_otgfs.c  usbd_stm32wb55_devfs.c
mcl/f4/: i2c.h  linker.ld
mcl/f7/: i2c.h  linker.ld
mcl/fx/: clock.h  timer.h
mcl/h7/: h7.h  i2c.h  stm32h7xx_hal_conf.h  system_stm32h7xx_dualcore_boot_cm4_cm7.c
mcl/h7/CM4/: core.c  linker.ld
mcl/h7/CM7/: core.c  linker.ld
net/: lwipopts_examples_common.h  server.h
npb/: mcu.options  mcu.proto  nm.h  plot.py
sns/: sns.h
sns/MS5837/: MS5837.h
sns/TOF/: VL53L0X.h
sns/imu/: bno.h  bno055.h  bno085.h  mpu6050.h
sns/mag/: hmc5883L.h  hmc5883l.h
sns/motor/: motor.h  test.h
